--- a/front_end/src/components/Book/Book.css
+++ b/front_end/src/components/Book/Book.css
@@ -4,3 +4,10 @@
     left: 35%;
     width: 35%;
 }
+
+.form-submit_btn {
+    position: absolute;
+    top:450px;
+    left: 35%;
+    width: 35%;
+}
