--- a/front_end/src/components/PNR/pnr.css
+++ b/front_end/src/components/PNR/pnr.css
@@ -6,8 +6,20 @@ form {
   margin-top: 0;
 }
 
-.container {
-  margin-top: -6rem;
+.pnr_container {
+  width: 50vw;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 200px;
+}
+
+.row_container {
+  width: 50vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 !important;
 }
 .row_container input {
   width: 40%;
@@ -15,6 +27,7 @@ form {
   height: 3rem;
   border-radius: 5px;
   font-size: 20px;
+  margin-right: 15px;
 }
 
 .row_container button {
