--- a/front_end/src/components/Login/login.css
+++ b/front_end/src/components/Login/login.css
@@ -1,8 +1,17 @@
-.container {
-  position: absolute;
-  top: 300px;
-  left: 350px;
-}
 .shadow {
   background-color: white;
+}
+
+.login_container {
+  position: absolute;
+  top: 50% !important;
+  right: 50% !important;
+  transform: translate(50%, -50%) !important;
+  width: 70vw;
+  max-width: 700px;
+}
+
+.row{
+  margin: 0 !important;
+  width: 100% !important;
 }
