--- a/front_end/src/components/Navbar/navbar.css
+++ b/front_end/src/components/Navbar/navbar.css
@@ -2,13 +2,15 @@
   margin: 0;
   padding: 0;
 }
+
 header img {
-  height: 60px;
+  height: 100%;
   margin-left: 0px;
+  /* margin: 5px; */
 }
 
 header {
-  background-color: #deec11;
+  background-color: #2546c9;
   position: fixed;
   top: 0;
   left: 0;
@@ -28,12 +30,17 @@ header li {
 }
 
 header li a {
-  color: black;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   font-weight: bold;
 }
 .butt {
-  padding: 8px;
   color: whitesmoke;
+  border-radius: 20px;
+  padding: 10px 15px;
+  transition: background-color 500ms;
+}
+
+.butt:hover {
   background-color: rgb(238, 21, 32);
 }
