--- a/front_end/src/components/CardPanel/CardPanel.css
+++ b/front_end/src/components/CardPanel/CardPanel.css
@@ -1,3 +1,7 @@
 .cardpanel{
   margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
