--- a/front_end/src/components/BookCard/BookCard.css
+++ b/front_end/src/components/BookCard/BookCard.css
@@ -18,7 +18,7 @@
   top: 0;
 }
 .book-card {
-  width: 70vw;
+  width: 80vw;
   max-width: 1200px;
 }
 .card .card_body {
@@ -43,9 +43,9 @@
 }
 
 .text_arr {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
 }
 
 .book-btn {
@@ -73,3 +73,4 @@
 .book-btn:hover {
   background-color: rgba(255, 255, 255, 1);
 }
+
